#7018 closed bug (fixed)
Mounting an ext3 partition
Reported by: | eu | Owned by: | korli |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | System/Kernel | Version: | R1/Development |
Keywords: | ext3, panic | Cc: | |
Blocked By: | Blocking: | ||
Platform: | x86 |
Description
I tested various versions of the 39924 nightly build on a Lenovo T61p laptop.
When mounting read-only an ext4 or ext3 partition with any gcc4 or gcc4 hybrid build I get a kernel panic. Trying the same thing with a gcc2 or gcc2 hybrid build works just fine.
Attachments (2)
Change History (17)
follow-up: 9 comment:1 by , 14 years ago
comment:2 by , 14 years ago
It is recognized in DriveSetup, but it is an ext3 partition. Sorry, I should not have included the ext4 partition in my report, because that one is not recognized in DriveSetup.
follow-ups: 4 5 comment:3 by , 14 years ago
Bummer :( Anyway if possible please include a photo of the kernel panic.
comment:6 by , 14 years ago
Keywords: | ext4 removed |
---|---|
Platform: | All → x86 |
Summary: | Mounting an ext4/ext3 partition → Mounting an ext3 partition |
comment:7 by , 14 years ago
Owner: | changed from | to
---|---|
Status: | new → assigned |
follow-up: 10 comment:8 by , 14 years ago
Component: | File Systems/ext2 → System/Kernel |
---|
the ext2 addon provides its own DirectoryIterator, though the stack trace seems to imply the addon uses the DirectoryIterator provided by the kernel. It looks like a problem with the elf symbol resolution. Reassigning to kernel. Ingo maybe has an idea.
follow-up: 14 comment:9 by , 14 years ago
Replying to diver:
Is it recognized in DriveSetup? My ext4 partition is not. Should I open a ticket for that korli?
It's probably normal as we still miss a few features. Don't hold your breath, but they should be included by the end of January.
comment:10 by , 14 years ago
Replying to korli:
the ext2 addon provides its own DirectoryIterator, though the stack trace seems to imply the addon uses the DirectoryIterator provided by the kernel.
Ah, indeed, I missed that. All kernel classes (at least all with virtual methods) should live in an appropriate namespace (the unnamed namespace for classes only used within a source file or BPrivate
or B*
for others) to avoid clashes with equally named classes in add-ons. In this case the problem is the DirectoryIterator
class in device_manager/legacy_drivers.cpp
.
follow-up: 12 comment:11 by , 14 years ago
I added a LegacyDrivers namespace for legacy_drivers.cpp in hrev39945.
comment:12 by , 14 years ago
follow-up: 15 comment:14 by , 14 years ago
comment:15 by , 14 years ago
Replying to diver:
Replying to korli:
It's probably normal as we still miss a few features. Don't hold your breath, but they should be included by the end of January.
Awesome! I can mount my ext4 partition since hrev40129. Thank you very much!
You're welcome. Please test a bit, just be warned that data corruption is possible when mounting read/write.
Is it recognized in DriveSetup? My ext4 partition is not. Should I open a ticket for that korli?