adding a LegacyDrivers namespace to avoid clash with other components (see #7018).

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@39945 a95241bf-73f2-0310-859d-f6bbb57e9c96